@@ -2,6 +2,7 @@ package com.tech.interview.rmsflights.exception.handler;
 
 
 import com.tech.interview.rmsflights.exception.ResourceNotFoundException;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindException;
@@ -13,6 +14,7 @@ import org.springframework.web.context.request.WebRequest;
 import java.lang.reflect.UndeclaredThrowableException;
 import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 import java.util.stream.Collectors;
 
 /**
@@ -23,50 +25,54 @@ public class GlobalExceptionHandler {
 
     /**
      * Handler URL not found : 404
+     *
      * @param ex
      * @param request
      * @return
      */
     @ExceptionHandler(ResourceNotFoundException.class)
     public ResponseEntity<?> resourceNotFoundException(ResourceNotFoundException ex, WebRequest request) {
-        ErrorDetails errorDetails = new ErrorDetails(new Date(), Arrays.asList(ex.getMessage()), request.getDescription(false));
+        ErrorDetails errorDetails = new ErrorDetails(new Date(), List.of(ex.getMessage()), request.getDescription(false));
         return new ResponseEntity<>(errorDetails, HttpStatus.NOT_FOUND);
     }
 
     /**
      * Validation exception handler : 400
+     *
      * @param ex
      * @param request
      * @return
      */
     @ExceptionHandler(BindException.class)
     public ResponseEntity<?> bindExcpetionHandler(BindException ex, WebRequest request) {
-        ErrorDetails errorDetails = new ErrorDetails(new Date(), ex.getBindingResult().getAllErrors().stream().map(x-> x.getDefaultMessage()).collect(Collectors.toList()), request.getDescription(false));
+        ErrorDetails errorDetails = new ErrorDetails(new Date(), ex.getBindingResult().getAllErrors().stream().map(DefaultMessageSourceResolvable::getDefaultMessage).collect(Collectors.toList()), request.getDescription(false));
         return new ResponseEntity<>(errorDetails, HttpStatus.BAD_REQUEST);
 
     }
 
     /**
      * Validation exception handler : 400
+     *
      * @param ex
      * @param request
      * @return
      */
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<?> methodArgumentNotValidExcpetionHandler(MethodArgumentNotValidException ex, WebRequest request) {
-        ErrorDetails errorDetails = new ErrorDetails(new Date(), ex.getBindingResult().getAllErrors().stream().map(x-> x.getDefaultMessage()).collect(Collectors.toList()), request.getDescription(false));
+        ErrorDetails errorDetails = new ErrorDetails(new Date(), ex.getBindingResult().getAllErrors().stream().map(DefaultMessageSourceResolvable::getDefaultMessage).collect(Collectors.toList()), request.getDescription(false));
         return new ResponseEntity<>(errorDetails, HttpStatus.BAD_REQUEST);
     }
 
     /**
      * Other exceptions : 500
+     *
      * @param ex
      * @param request
      * @return
      */
     @ExceptionHandler(Exception.class)
     public ResponseEntity<?> globalExcpetionHandler(Exception ex, WebRequest request) {
-        ErrorDetails errorDetails = new ErrorDetails(new Date(), Arrays.asList(ex.getMessage()), request.getDescription(false));
+        ErrorDetails errorDetails = new ErrorDetails(new Date(), List.of(ex.getMessage()), request.getDescription(false));
         return new ResponseEntity<>(errorDetails, HttpStatus.INTERNAL_SERVER_ERROR);
 
     }
